--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "day3",
+  "name": "day6",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "jest": "^27.2.0"
+  },
   "dependencies": {
-    "chalk": "^4.1.2",
-    "express": "^4.17.1"
+    "@types/jest": "^27.0.1"
   }
 }
